# Clothing-Retrieval

./: README.md  clothing retrieval as app.py  clothing retrieval v3.ipynb  clothing_retrieval_API  setup.cfg
Comparable models/: clothing retrieval.ipynb  clothing retrievalv2.ipynb
SRC/clothing_retrieval/: Final.py
