[metadata]
name = clothing-retrieval
version = 0.0.1
author = Sandy Hsu and 4 others
author_email = organizingwithsandy@gmail.com
description = MMfashion to crop the clothes from backgroun; ResNet to find pictures with most likely attribute.
long_description_content_type = text/markdown README.md
url = https://milkywaysandy.github.io/SandyHsu/
project_urls =
    Bug Tracker = https://milkywaysandy.github.io/SandyHsu/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5

[options.packages.find]
where = src
